<resources>
    <string name="app_name">Semana9DPAFirebase</string>
    <string name="btn_Login">LOGIN</string>
    <string name="btn_Registro">REGISTRO</string>
    <string name="title_register">Register</string>
    <string name="valetFullName">Full Name</string>
    <string name="valetCountry">Country</string>
    <string name="valetemail">Email</string>
    <string name="valetpassword">Password</string>
    <string name="valbtnsaveregister">Guardar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Producto</string>
    <string name="menu_gallery">Cliente</string>
    <string name="menu_slideshow">Pokemon</string>

    <string name="tittle_customer">Register</string>
    <string name="valetfirtsname">Firts name</string>
    <string name="valetlastsname">Last name</string>
    <string name="valetphonenumber">Phone number</string>
    <string name="valbtnsearchpokemon">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>